WeightPaint color blends with viewport background in wireframe mode #67587

Closed
opened 2019-07-24 12:51:07 +02:00 by Pablo Vazquez · 9 comments
Member

System Information
Operating system: Linux-4.15.0-54-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74) RC2

Short description of error
When weightpainting in Wireframe mode with X-Ray disabled, the weight colors blend with the viewport background color.

{F7626510, size=full}
{F7626520, size=full}

File used in the example:
weightpaint_viewport_background.blend

How to reproduce the error on startup file:

  • Switch to Wireframe view
  • Turn off X-Ray [Alt+Shift+Z]
  • With any mesh selected, switch to WeightPaint mode
  • In the Viewport Shading popover, change the background color of the viewport.

Thanks!

**System Information** Operating system: Linux-4.15.0-54-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74) RC2 **Short description of error** When weightpainting in Wireframe mode with X-Ray disabled, the weight colors blend with the viewport background color. {[F7626510](https://archive.blender.org/developer/F7626510/weightpaint_viewport_background.png), size=full} {[F7626520](https://archive.blender.org/developer/F7626520/vid_65211-2019-07-24_12.44.58.mp4), size=full} **File used in the example:** [weightpaint_viewport_background.blend](https://archive.blender.org/developer/F7626517/weightpaint_viewport_background.blend) **How to reproduce the error on startup file:** * Switch to Wireframe view * Turn off X-Ray [Alt+Shift+Z] * With any mesh selected, switch to WeightPaint mode * In the Viewport Shading popover, change the background color of the viewport. Thanks!
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Jeroen Bakker was assigned by Pablo Vazquez 2019-07-24 12:51:56 +02:00
Jeroen Bakker changed title from WeightPaint color blends with viewport background to WeightPaint color blends with viewport background in wireframe mode 2019-07-25 08:20:22 +02:00

This issue was referenced by 7bc300a74b

This issue was referenced by 7bc300a74baa382e6243322898675c3f24121606
Member

We should do this in 2 steps.

  1. solve the issue at hand. D5340: PaintModes: Fix Drawing in Wireframe Non X-Ray Mode
  2. migrate the paint modes to the workbench (like we did for texture painting)
We should do this in 2 steps. 1. solve the issue at hand. [D5340: PaintModes: Fix Drawing in Wireframe Non X-Ray Mode](https://archive.blender.org/developer/D5340) 2. migrate the paint modes to the workbench (like we did for texture painting)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Reopened as only point 1 has been addressed. Workbench still needs to be used for drawing these paint modes.

Reopened as only point 1 has been addressed. Workbench still needs to be used for drawing these paint modes.
Jeroen Bakker was unassigned by Dalai Felinto 2019-12-23 16:33:34 +01:00

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by 4723644e7f

This issue was referenced by 4723644e7f5b9ac607844fb9c43fafda7360e606

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-07-01 19:16:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67587
No description provided.